# reedsolomon

./: .gitignore  CMakeLists.txt
include/: ghalua_byte.hpp  ghalua_math.hpp  ghalua_poly.hpp
include/reedsolomon/: encoder.hpp  ghalua_byte.hpp  ghalua_math.hpp  ghalua_poly.hpp
src/: devtest.cpp  encoder.cpp  ghalua_byte.cpp  ghalua_math.cpp  ghalua_math_tests.cpp  ghalua_poly.cpp  test.cpp
test/: test_encoder.cpp  test_encoder_bb.cpp  test_encoder_wb.cpp  test_gfByte.cpp  test_gfPoly.cpp
